Added src folder with all files inside it

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,9 @@
+# definition ghc compiler
 HXX := ghc-9.6.1
-HBASE := -package base,quickcheck-instances
+# basic flags to compile our program
 HFLAGS := -Werror -Wall -Wmissing-local-signatures -o lab2
 
-run: Tests.hs 
+run: Tests.hs
 	$(HXX) $(HFLAGS) Tests.hs
 	./lab2
 
